# Novizi-BackEnd

./: .flake8  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  Procfile  README.md  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
docs/: index.md
events/: admin.py  apps.py  filter.py  forms.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
events/migrations/: 0001_initial.py  0002_auto_20200615_2138.py
http_docs/: users.http
novizi/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/: security.txt
users/: adapter.py  admin.py  models.py  permissions.py  serializers.py  urls.py
users/migrations/: 0001_initial.py
